--- a/apprendre-python3.ipynb
+++ b/apprendre-python3.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Petite note à propos des cellules dans Jupyter\n",
     "\n",
-    "Lorsque vous éditer une cellule dans Jupyter notebook, vous devez rouler à nouveau la cellule en appuyant sur **`<Shift> + <Enter>`**. Cela va permettre de rendre disponiles les changements effectuées aux autres cellules.\n",
+    "Lorsque vous éditer une cellule dans Jupyter Notebook, vous devez rouler à nouveau la cellule en appuyant sur **`<Shift> + <Enter>`**. Cela va permettre de rendre disponiles les changements effectuées aux autres cellules.\n",
     "\n",
     "Appuyez sur **`<Enter>`** pour ajouter de nouvelles lignes dans la cellule que vous éditer.\n",
     "\n",
