--- a/apprendre-python3.ipynb
+++ b/apprendre-python3.ipynb
@@ -16,11 +16,11 @@
     "\n",
     "#### Cellules contenant du code\n",
     "\n",
-    "Re-running will execute any statements you have written. Pour éditer une cellule existante contenant du code, cliquer dessus.\n",
+    "La relance exécutera toutes les instructions que vous avez écrites. Pour éditer une cellule existante contenant du code, cliquer dessus.\n",
     "\n",
     "#### Cellules contenant du Markdown\n",
     "\n",
-    "Re-running will render the markdown text. To edit an existing markdown cell, double-click on it.\n",
+    "Une nouvelle exécution donnera le rendu final du Markdown. Pour modifier une cellule existante contenant du Markdown, double-cliquez dessus.\n",
     "\n",
     "<hr>"
    ]
@@ -33,12 +33,12 @@
     "\n",
     "Près du haut de la page https://try.jupyter.org, Jupyter fournit une barre de menus avec les options (`File`, `Edit`, `View`, `Insert`, ...) et une barre d'outils représentés avec les icones (disquette, signe plus, ciseaux, 2 fichiers, calepin et fichier, flèeche vers le haut, ...).\n",
     "\n",
-    "#### Inserting and removing cells\n",
+    "#### Insertion et suppression de cellules\n",
     "\n",
     "- Use the \"plus sign\" icon to insert a cell below the currently selected cell\n",
     "- Use \"Insert\" -> \"Insert Cell Above\" from the menu to insert above\n",
     "\n",
-    "#### Clear the output of all cells\n",
+    "#### Effacer la sortie de toutes les cellules\n",
     "\n",
     "- Use \"Kernel\" -> \"Restart\" from the menu to restart the kernel\n",
     "    - click on \"clear all outputs & restart\" to have all the output cleared\n",
@@ -88,19 +88,19 @@
     "  - `7.41`\n",
     "  - `-0.006`\n",
     "- **`str`** (string; une chaîne de caractères délimitée par des guillemets simples, doubles ou triples)\n",
-    "  - `'ceci est une chaîne de caractères délimitée par des guillemets simples'`\n",
-    "  - `\"ceci est une chaîne de caractères délimitée par des guillemets doubles\"`\n",
-    "  - `'''this is a triple quoted string using single quotes'''`\n",
-    "  - `\"\"\"this is a triple quoted string using double quotes\"\"\"`\n",
-    "- **`bool`** (boolean; a binary value that is either true or false)\n",
+    "  - `'ceci est une chaîne de caractères entre guillemets simples'`\n",
+    "  - `\"ceci est une chaîne de caractères entre guillemets doubles\"`\n",
+    "  - `'''il s'agit d'une chaîne de caractères entre guillemets triples utilisant des guillemets simples'''`\n",
+    "  - `\"\"\"ceci est une chaîne de caractères entre guillemets triples utilisant des guillemets doubles\"\"\"`\n",
+    "- ** `bool` ** (booléen; une valeur binaire vraie ou fausse)\n",
     "  - `True`\n",
     "  - `False`\n",
-    "- **`NoneType`** (a special type representing the absence of a value)\n",
+    "- ** `NoneType` ** (un type spécial représentant l'absence de valeur)\n",
     "  - `None`\n",
     "\n",
-    "In Python, a **variable** is a name you specify in your code that maps to a particular **object**, object **instance**, or value.\n",
+    "En Python, une **variable** est un nom que vous spécifiez dans votre code et qui correspond à un **objet**, une instance d'objet ou une valeur particulière.\n",
     "\n",
-    "By defining variables, we can refer to things by names that make sense to us. Names for variables can only contain letters, underscores (`_`), or numbers (no spaces, dashes, or other characters). Variable names must start with a letter or underscore.\n",
+    "En définissant des variables, nous pouvons faire référence à des choses par des noms qui ont du sens pour nous. Les noms des variables ne peuvent contenir que des lettres, des traits de soulignement (`_`) ou des chiffres (pas d'espaces, de tirets ou d'autres caractères). Les noms de variables doivent commencer par une lettre ou un trait de soulignement.\n",
     "\n",
     "<hr>"
    ]
