--- a/apprendre-python3.ipynb
+++ b/apprendre-python3.ipynb
@@ -115,22 +115,23 @@
     "\n",
     "- arithmetic operators\n",
     "  - **`+`** (addition)\n",
-    "  - **`-`** (subtraction)\n",
+    "  - **`-`** (soustraction)\n",
     "  - **`*`** (multiplication)\n",
-    "  - **`/`** (division)\n",
-    "  - __`**`__ (exponent)\n",
-    "- assignment operators\n",
-    "  - **`=`** (assign a value)\n",
-    "  - **`+=`** (add and re-assign; increment)\n",
-    "  - **`-=`** (subtract and re-assign; decrement)\n",
-    "  - **`*=`** (multiply and re-assign)\n",
-    "- comparison operators (return either `True` or `False`)\n",
-    "  - **`==`** (equal to)\n",
-    "  - **`!=`** (not equal to)\n",
-    "  - **`<`** (less than)\n",
-    "  - **`<=`** (less than or equal to)\n",
-    "  - **`>`** (greater than)\n",
-    "  - **`>=`** (greater than or equal to)\n",
+    "  - **`/`** (division réelle)\n",
+    "  - **`//`** (division entière)\n",
+    "  - __`**`__ (exposant)\n",
+    "- opérateurs d'affectation\n",
+    "  - **`=`** (affecte une valeur)\n",
+    "  - **`+=`** (ajoute et réaffecte; incrémente)\n",
+    "  - **`-=`** (soustrait et réaffecte; décrémente)\n",
+    "  - **`*=`** (multiplie  et réaffecte)\n",
+    "- opérateurs de comparaison (retourne soit `True` ou `False`)\n",
+    "  - **`==`** (égal à)\n",
+    "  - **`!=`** (pas égal à)\n",
+    "  - **`<`** (moins que)\n",
+    "  - **`<=`** (inférieur ou égal à)\n",
+    "  - **`>`** (supérieur à)\n",
+    "  - **`>=`** (supérieur ou égal à)\n",
     "\n",
     "When multiple operators are used in a single expression, **operator precedence** determines which parts of the expression are evaluated in which order. Operators with higher precedence are evaluated first (like PEMDAS in math). Operators with the same precedence are evaluated from left to right.\n",
     "\n",
