--- a/apprendre-python3.ipynb
+++ b/apprendre-python3.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "[learning-python3.ipynb]: https://gist.githubusercontent.com/kenjyco/69eeb503125035f21a9d/raw/learning-python3.ipynb\n",
     "\n",
@@ -29,9 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Opérations courantes dans Jupyter\n",
     "\n",
@@ -65,9 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Références\n",
     "\n",
@@ -81,9 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Objets Python, les types de base et les variables\n",
     "\n",
@@ -115,9 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Opérateurs de base\n",
     "\n",
@@ -130,6 +120,7 @@
     "  - **`/`** (division réelle)\n",
     "  - **`//`** (division entière)\n",
     "  - __`**`__ (exposant)\n",
+    "  - **`%`** (modulo, qui donne le reste de la division)\n",
     "- opérateurs d'affectation\n",
     "  - **`=`** (affecte une valeur)\n",
     "  - **`+=`** (ajoute et réaffecte; incrémente)\n",
@@ -156,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,21 +258,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "343"
+      "text/plain": [
+       "343"
+      ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
     "# Exposant\n",
     "num5 ** num6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "# Modulo\n",
+    "num1 % num6"
    ]
   },
   {
@@ -299,7 +313,7 @@
     }
    ],
    "source": [
-    "# Increment existing variable\n",
+    "# Incrémentation d'une variable existante\n",
     "num7 += 4\n",
     "num7"
    ]
@@ -319,7 +333,7 @@
     }
    ],
    "source": [
-    "# Decrement existing variable\n",
+    "# Décrémentation d'une variable existante\n",
     "num6 -= 2\n",
     "num6"
    ]
@@ -339,7 +353,7 @@
     }
    ],
    "source": [
-    "# Multiply & re-assign\n",
+    "# Multiplie et réassigne\n",
     "num3 *= 5\n",
     "num3"
    ]
@@ -359,7 +373,7 @@
     }
    ],
    "source": [
-    "# Assign the value of an expression to a variable\n",
+    "# Assigne la valeur d'une expression à une variable\n",
     "num8 = num1 + num2 * num3\n",
     "num8"
    ]
@@ -379,7 +393,7 @@
     }
    ],
    "source": [
-    "# Are these two expressions equal to each other?\n",
+    "# Est-ce que les deux expressions de part et d'autres du \"==\" sont égales?\n",
     "num1 + num2 == num5"
    ]
   },
@@ -398,7 +412,7 @@
     }
    ],
    "source": [
-    "# Are these two expressions not equal to each other?\n",
+    "# Est-ce que les deux expressions de part et d'autres du \"!=\" sont inégales?\n",
     "num3 != num4"
    ]
   },
@@ -417,7 +431,7 @@
     }
    ],
    "source": [
-    "# Is the first expression less than the second expression?\n",
+    "# Est-ce que la première expression est plus petite que la seconde?\n",
     "num5 < num6"
    ]
   },
@@ -436,7 +450,7 @@
     }
    ],
    "source": [
-    "# Is this expression True?\n",
+    "# Est-ce que cette expression retourne vrai (True)?\n",
     "5 > 3 > 1"
    ]
   },
@@ -455,7 +469,7 @@
     }
    ],
    "source": [
-    "# Is this expression True?\n",
+    "# Est-ce que cette expression retourne vrai (True)?\n",
     "5 > 3 < 4 == 3 + 1"
    ]
   },
@@ -465,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign some strings to different variables\n",
+    "# Assigner des chaînes de caractère (strings) à différentes variables\n",
     "simple_string1 = 'an example'\n",
     "simple_string2 = \"oranges \""
    ]
@@ -485,7 +499,7 @@
     }
    ],
    "source": [
-    "# Addition\n",
+    "# Addition (concaténation)\n",
     "simple_string1 + ' of using the + operator'"
    ]
   },
@@ -504,7 +518,7 @@
     }
    ],
    "source": [
-    "# Notice that the string was not modified\n",
+    "# Remarquez que la variable n'a pas été modifiée\n",
     "simple_string1"
    ]
   },
@@ -523,7 +537,7 @@
     }
    ],
    "source": [
-    "# Multiplication\n",
+    "# Multiplication (répétition)\n",
     "simple_string2 * 4"
    ]
   },
@@ -542,7 +556,7 @@
     }
    ],
    "source": [
-    "# This string wasn't modified either\n",
+    "# Cette variable n'a pas été modifiée non plus\n",
     "simple_string2"
    ]
   },
@@ -561,7 +575,7 @@
     }
    ],
    "source": [
-    "# Are these two expressions equal to each other?\n",
+    "# Ces deux expressions sont-elles égales?\n",
     "simple_string1 == simple_string2"
    ]
   },
@@ -580,7 +594,7 @@
     }
    ],
    "source": [
-    "# Are these two expressions equal to each other?\n",
+    "# Ces deux expressions sont-elles égales?\n",
     "simple_string1 == 'an example'"
    ]
   },
@@ -599,7 +613,7 @@
     }
    ],
    "source": [
-    "# Add and re-assign\n",
+    "# Ajoute et ré-assigne\n",
     "simple_string1 += ' that re-assigned the original string'\n",
     "simple_string1"
    ]
@@ -635,24 +649,22 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Conteneurs de base\n",
     "\n",
-    "> Note: les objets **mutables** peuvent être modifiés après la création et les objets **immuables** ne peuvent pas.\n",
+    "> Note: les objets **modifiables** peuvent être modifiés après la création et les objets **immuables** ne peuvent pas.\n",
     "\n",
     "Les conteneurs sont des objets qui peuvent être utilisés pour regrouper d'autres objets. Les types de conteneurs de base incluent:\n",
     "\n",
     "- **`str`** (string: immuables; indexé par des entiers; les éléments sont stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
-    "- **`list`** (liste: mutable; indexé par des entiers; les éléments sont stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
+    "- **`list`** (liste: modifiables; indexé par des entiers; les éléments sont stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
     "  - `[3, 5, 6, 3, 'chien', 'chat', False]`\n",
     "- **`tuple`** (tuple: immuables; indexé par des entiers; les éléments sont stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
     "  - `(3, 5, 6, 3, 'chien', 'chat', False)`\n",
-    "- **`set`** (set: mutables; pas du tout indexé; les éléments ne sont PAS stockés dans l'ordre dans lequel ils ont été ajoutés; ne peut contenir que des objets immuables; ne contient PAS d'objets en double)\n",
+    "- **`set`** (set: modifiables; pas du tout indexé; les éléments ne sont PAS stockés dans l'ordre dans lequel ils ont été ajoutés; ne peut contenir que des objets immuables; ne contient PAS d'objets en double)\n",
     "  - `{3, 5, 6, 3, 'chien', 'chat', False}`\n",
-    "- **`dict`** (dictionaire: mutables; les paires clé-valeur sont indexées par des clés immuables; les éléments ne sont PAS stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
+    "- **`dict`** (dictionaire: modifiables; les paires clé-valeur sont indexées par des clés immuables; les éléments ne sont PAS stockés dans l'ordre dans lequel ils ont été ajoutés)\n",
     "  - `{'nom': 'Jeanne', 'age': 23, 'mets_pref': ['pizza', 'fruits', 'poisson']}`\n",
     "\n",
     "Lorsque vous définissez des listes, des tuples ou des sets, utilisez des virgules (,) pour séparer les éléments individuels. Lors de la définition des dict, utilisez deux points (:) pour séparer les clés des valeurs et des virgules (,) pour séparer les paires clé-valeur.\n",
@@ -830,9 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Accès aux données dans les conteneurs\n",
     "\n",
@@ -975,9 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Python built-in functions and callables\n",
     "\n",
@@ -1153,9 +1161,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Python object attributes (methods and properties)\n",
     "\n",
@@ -1172,9 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Some methods on string objects\n",
     "\n",
@@ -1329,11 +1333,9 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "## Some methods on list objects\n",
     "\n",
@@ -1364,9 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Some methods on set objects\n",
     "\n",
@@ -1403,9 +1403,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Some methods on dict objects\n",
     "\n",
@@ -1438,9 +1436,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Positional arguments and keyword arguments to callables\n",
     "\n",
@@ -1483,9 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Formatting strings and using placeholders"
    ]
@@ -1510,9 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Python \"for loops\"\n",
     "\n",
@@ -1541,9 +1533,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Python \"if statements\" and \"while loops\"\n",
     "\n",
@@ -1578,9 +1568,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## List, set, and dict comprehensions"
    ]
@@ -1605,9 +1593,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Creating objects from arguments or other objects\n",
     "\n",
@@ -1646,9 +1632,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Importing modules"
    ]
@@ -1673,9 +1657,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Exceptions"
    ]
@@ -1700,9 +1682,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Classes: Creating your own objects"
    ]
@@ -1788,9 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Defining functions and methods"
    ]
@@ -1815,9 +1793,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Creating an initializer method for your classes"
    ]
@@ -1842,9 +1818,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Other \"magic methods\""
    ]
@@ -1869,9 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Context managers and the \"with statement\""
    ]
@@ -1911,7 +1883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0-final"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
