Poursuite de la traduction

--- a/apprendre-python3.ipynb
+++ b/apprendre-python3.ipynb
@@ -674,11 +674,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign some containers to different variables\n",
+    "# Assigner quelques conteneurs à différentes variables\n",
     "list1 = [3, 5, 6, 3, 'chien', 'chat', False]\n",
     "tuple1 = (3, 5, 6, 3, 'chien', 'chat', False)\n",
     "set1 = {3, 5, 6, 3, 'chien', 'chat', False}\n",
@@ -745,16 +745,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": "{'nom': 'Jeanne', 'age': 23, 'mets_pref': ['pizza', 'fruits', 'poisson']}"
+      "text/plain": [
+       "{'nom': 'Jeanne', 'age': 23, 'mets_pref': ['pizza', 'fruits', 'poisson']}"
+      ]
      },
-     "execution_count": 31,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -853,7 +855,7 @@
     "  - utilisez **l'indexation négative** pour commencer par la fin de la série\n",
     "- les dict sont indexés par leurs clés\n",
     "\n",
-    "> Note: les sets are not indexed, so we cannot use subscript notation to access data elements."
+    "> Note: les sets ne sont pas indexés, il est donc impossible d'accéder aux éléments individuellement en utilisant la notation en indice (entre crochets)."
    ]
   },
   {
@@ -909,7 +911,7 @@
     }
    ],
    "source": [
-    "# Access a range of items in a sequence\n",
+    "# Accéder à une étendue spécifique des éléments d'une séquence\n",
     "simple_string1[3:8]"
    ]
   },
@@ -928,7 +930,7 @@
     }
    ],
    "source": [
-    "# Access a range of items in a sequence\n",
+    "# Accéder à une étendue spécifique des éléments d'une séquence\n",
     "tuple1[:-3]"
    ]
   },
@@ -947,65 +949,99 @@
     }
    ],
    "source": [
-    "# Access a range of items in a sequence\n",
+    "# Accéder à une étendue spécifique des éléments d'une séquence\n",
     "list1[4:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-41-64a3377f8872>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Access an item in a dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdict1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 'name'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'Jeanne'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
     }
    ],
    "source": [
-    "# Access an item in a dictionary\n",
-    "dict1['name']"
+    "# Accéder à un élément d'un dictionnaire\n",
+    "dict1['nom']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'poisson'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
    "source": [
-    "# Access an element of a sequence in a dictionary\n",
-    "dict1['fav_foods'][2]"
+    "# Accéder à un élément d'une séquence d'un dictionnaire\n",
+    "dict1['mets_pref'][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-27b48f871b84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0ml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'chien'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'chat'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'grapes'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'chien'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# Accéder aux données d'un set\n",
+    "l = ['chien', 'chat', False, 5, 'grapes','chien']\n",
+    "s = set(l)\n",
+    "s[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Python built-in functions and callables\n",
+    "## Fonctions natives et objets appelables dans Python\n",
     "\n",
-    "A **function** is a Python object that you can \"call\" to **perform an action** or compute and **return another object**. You call a function by placing parentheses to the right of the function name. Some functions allow you to pass **arguments** inside the parentheses (separating multiple arguments with a comma). Internal to the function, these arguments are treated like variables.\n",
+    "Une **fonction** est un objet Python qu'il est possible \"d'appeler\" pour **réaliser une action** ou calculer et **retourner un autre objet**. Vous appelez une fonction en mettant des parenthèses à la droite du nom de la fonction. Certaines fonctions vous permettent de passer des **arguments** à l'intérieur des parenthèses (en séparant les arguments multiples avec des virgules). Internes à la fonction, ces arguments sont traités comme des variables.\n",
     "\n",
-    "Python has several useful built-in functions to help you work with different objects and/or your environment. Here is a small sample of them:\n",
+    "Python a plusieurs fonctions intégrées très utiles qui vous aident à manipuler différents objets et/ou votre environnement. En voici quelques unes:\n",
     "\n",
-    "- **`type(obj)`** to determine the type of an object\n",
-    "- **`len(container)`** to determine how many items are in a container\n",
-    "- **`callable(obj)`** to determine if an object is callable\n",
-    "- **`sorted(container)`** to return a new list from a container, with the items sorted\n",
-    "- **`sum(container)`** to compute the sum of a container of numbers\n",
-    "- **`min(container)`** to determine the smallest item in a container\n",
-    "- **`max(container)`** to determine the largest item in a container\n",
-    "- **`abs(number)`** to determine the absolute value of a number\n",
-    "- **`repr(obj)`** to return a string representation of an object\n",
+    "- **`type(obj)`** sert à déterminer le type d'un objet\n",
+    "- **`len(container)`** sert à déterminer le nombre d'éléments contenus dans un conteneur\n",
+    "- **`callable(obj)`** sert à déterminer si un objet est appelable\n",
+    "- **`sorted(container)`** sert à retourner une nouvelle liste d'un conteneur dont les éléments sont triés\n",
+    "- **`sum(container)`** sert à calculer la somme d'un conteneur de nombres\n",
+    "- **`min(container)`** sert à trouver le plus petit élément d'un conteneur\n",
+    "- **`max(container)`** sert à trouver le plus grand élément d'un conteneur\n",
+    "- **`abs(number)`** sert à trouver la valeur absolue d'un nombre\n",
+    "- **`repr(obj)`** sert à retourner la représentation d'un objet au format chaîne de caractères\n",
     "\n",
-    "> Complete list of built-in functions: https://docs.python.org/3/library/functions.html\n",
+    "> Liste complète des fonctions natives: https://docs.python.org/fr/3/library/functions.html\n",
     "\n",
-    "There are also different ways of defining your own functions and callable objects that we will explore later."
+    "Il y a aussi différentes façons de définir vos propres fonctions et objets appelables que nous allons explorer plus tard."
    ]
   },
   {
@@ -1014,7 +1050,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the type() function to determine the type of an object\n",
+    "# Utiliser la fonction type() pour déterminer le type d'un objet\n",
     "type(simple_string1)"
    ]
   },
@@ -1024,7 +1060,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the len() function to determine how many items are in a container\n",
+    "# Utiliser la fonction len() pour déterminer le nombre d'éléments contenus dans un conteneur\n",
     "len(dict1)"
    ]
   },
@@ -1034,7 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the len() function to determine how many items are in a container\n",
+    "# Utiliser la fonction len() pour déterminer le nombre d'éléments contenus dans un conteneur\n",
     "len(simple_string2)"
    ]
   },
@@ -1044,27 +1080,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the callable() function to determine if an object is callable\n",
+    "# Utiliser la fonction callable() pour déterminer si un objet est appelable\n",
     "callable(len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "source": [
-    "# Use the callable() function to determine if an object is callable\n",
+    "# Utiliser la fonction callable() pour déterminer si un objet est appelable\n",
     "callable(dict1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[-3, 1, 2, 3.6, 5, 7, 10]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
    "source": [
-    "# Use the sorted() function to return a new list from a container, with the items sorted\n",
+    "# Utiliser la fonction sorted() pour retourner une nouvelle liste d'un conteneur dont les éléments sont triés\n",
     "sorted([10, 1, 3.6, 7, 5, 2, -3])"
    ]
   },
@@ -1074,18 +1132,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the sorted() function to return a new list from a container, with the items sorted\n",
-    "# - notice that capitalized strings come first\n",
+    "# Utiliser la fonction sorted() pour retourner une nouvelle liste d'un conteneur dont les éléments sont triés\n",
+    "# - remarquez que les lettre majuscules viennent avant\n",
     "sorted(['dogs', 'cats', 'zebras', 'Chicago', 'California', 'ants', 'mice'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "25.6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "source": [
-    "# Use the sum() function to compute the sum of a container of numbers\n",
+    "# Utiliser la fonction sum() qui calcule la somme d'un conteneur de nombres\n",
     "sum([10, 1, 3.6, 7, 5, 2, -3])"
    ]
   },
@@ -1095,7 +1164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the min() function to determine the smallest item in a container\n",
+    "# Utiliser la fonction min() pour trouver le plus petit élément d'un conteneur\n",
     "min([10, 1, 3.6, 7, 5, 2, -3])"
    ]
   },
@@ -1105,7 +1174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the min() function to determine the smallest item in a container\n",
+    "# Utiliser la fonction min() pour trouver le plus petit élément d'un conteneur\n",
     "min(['g', 'z', 'a', 'y'])"
    ]
   },
@@ -1115,7 +1184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the max() function to determine the largest item in a container\n",
+    "# Utiliser la fonction max() pour trouver le plus grand élément d'un conteneur\n",
     "max([10, 1, 3.6, 7, 5, 2, -3])"
    ]
   },
@@ -1125,7 +1194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the max() function to determine the largest item in a container\n",
+    "# Utiliser la fonction max() pour trouver le plus grand élément d'un conteneur\n",
     "max('gibberish')"
    ]
   },
@@ -1135,7 +1204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the abs() function to determine the absolute value of a number\n",
+    "# Utiliser la fonction abs() pour trouver la valeur absolue d'un nombre\n",
     "abs(10)"
    ]
   },
@@ -1145,17 +1214,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the abs() function to determine the absolute value of a number\n",
+    "# Utiliser la fonction abs() pour trouver la valeur absolue d'un nombre\n",
     "abs(-12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"{False, 3, 5, 6, 'chat', 'chien'}\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
    "source": [
-    "# Use the repr() function to return a string representation of an object\n",
+    "# Utiliser la fonction repr() retourner la représentation d'un objet au format chaîne de caractères\n",
     "repr(set1)"
    ]
   },
